# M5

./: .gitignore  Cargo.toml  M5_IMPLEMENTATION_SUMMARY.md  README.md  config.yaml  demo_sprint.md  sprint.md  sprint1.md
examples/: workflow_demo.rs
gui/: DESIGN.md  GUI_IMPLEMENTATION_REPORT.md
gui/mockups/: dashboard.md  review_workspace.md  sprint_panel.md
plans/: sprint-01.plan.json
progress/: sprint-01.progress.json
reviews/: AI_REVIEW.md
routing/: log.jsonl
runs/2025-01-25T20-30-00Z/: run.json
src/: lib.rs.backup.1756834122  lib.rs.backup.1756837312  main.rs
src/desktop/: cursor.rs  mod.rs  terminal.rs
src/gui/: app.rs  dashboard.rs  mod.rs  review_workspace.rs  sprint_panel.rs  state.rs
src/gui/components/: file_table.rs  mod.rs  progress_bar.rs  task_tree.rs
src/gui/utils/: file_watcher.rs  mod.rs  theme.rs
src/llm/: claude.rs  mod.rs  openrouter.rs  router.rs
src/orchestrator/: logger.rs  mod.rs  state.rs  task.rs
src/tui/: mod.rs
src/workflows/: edit.rs  mod.rs  plan.rs  review.rs
status/: REPORT.md
tests/: REPORT.md  desktop_integration.rs  tui_integration.rs  workflow_integration.rs
web-gui/: index.html  script.js  server.py  styles.css
