[package]
name = "deskagent"
version = "1.0.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "Desktop AI Assistant with Rust Core"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Async trait support
async-trait = "0.1"

# GUI dependencies
tauri = { version = "1.0", features = ["api-all"] }
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Platform-specific dependencies for macOS desktop control
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[[bin]]
name = "deskagent"
path = "src/main.rs"

[[bin]]
name = "deskagent-gui"
path = "src/bin/gui.rs"